# burn

./: cubecl.toml
crates/burn-fusion/: Cargo.toml
crates/burn-fusion/src/: backend.rs  debug.rs  lib.rs  server.rs
crates/burn-fusion/src/client/: mutex.rs
crates/burn-fusion/src/stream/: multi.rs
crates/burn-fusion/src/stream/store/: base.rs
crates/burn-train/src/metric/processor/: minimal.rs
docs/: DEBUGGING_API_SUMMARY.md  FUSION_DEBUGGING.md
examples/burn-test/: Cargo.toml
examples/burn-test/examples/: burn-test.rs  fusion-debug-patch.rs  graph-debug.rs
